fix: post - author groups alignment

--- a/less/ariastel/post.less
+++ b/less/ariastel/post.less
@@ -48,3 +48,13 @@
     border-bottom: 2px solid #facccc !important;
   }
 }
+
+.aa_post-author {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+
+  & > * {
+    margin-right: 4px;
+  }
+}
